--- a/index.html
+++ b/index.html
@@ -7,13 +7,41 @@
     <title>Biker Zone</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@latest/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- google font poppins -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+
+    <style>
+        .font-poppins {
+            font-family: "Poppins", serif;
+        }
+    </style>
+
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                        'pri-clr': '#E76F51',
+                    }
+                }
+            }
+        }
+    </script>
 </head>
 
-<body>
-    <header class="lg:px-36">
+<body class="font-poppins">
+    <header class="container mx-auto">
         <nav>
             <div class="navbar bg-base-100">
-                <div class="navbar-start">
+                <div class="flex-1">
+                    <!-- hidden for lg devices -->
                     <div class="dropdown">
                         <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
@@ -31,11 +59,12 @@
                             <li><a>Contact</a></li>
                         </ul>
                     </div>
-                    <a class="btn btn-ghost text-xl">Bike Dekho</a>
+
+                    <a class="btn btn-ghost text-4xl font-bold">Bike Dekho</a>
                 </div>
 
                 <div class="navbar-center hidden lg:flex">
-                    <ul class="menu menu-horizontal px-1">
+                    <ul class="menu menu-horizontal px-1 text-base font-medium">
                         <li><a>Home</a></li>
                         <li><a>Shop</a></li>
                         <li><a>News</a></li>
@@ -43,8 +72,8 @@
                     </ul>
                 </div>
 
-                <div class="navbar-end">
-                    <a class="btn btn-error text-white font-bold">Login</a>
+                <div class="">
+                    <a class="btn text-white font-bold bg-pri-clr">Login</a>
                 </div>
             </div>
         </nav>
