--- a/index.html
+++ b/index.html
@@ -78,115 +78,117 @@
             </div>
         </nav>
         <!-- banner section -->
-        <div class="carousel w-full  lg:h-[550px] bg-[#E76F511A] rounded-2xl mt-12">
-            <div id="slide1" class="carousel-item relative w-full ">
-                <div class="flex flex-col lg:flex-row gap-12 p-10 lg:p-24 w-full">
-                    <div class="space-y-2 lg:space-y-6 flex-1">
-                        <h1 class="text-5xl lg:text-6xl font-bold">
-                            Ride-on R15 V4
-                            <br>
-                            with Smile
-                        </h1>
+        <section>
+            <div class="carousel w-full  lg:h-[550px] bg-[#E76F511A] rounded-2xl mt-12">
+                <div id="slide1" class="carousel-item relative w-full ">
+                    <div class="flex flex-col lg:flex-row gap-12 p-10 lg:p-24 w-full">
+                        <div class="space-y-2 lg:space-y-6 flex-1">
+                            <h1 class="text-5xl lg:text-6xl font-bold">
+                                Ride-on R15 V4
+                                <br>
+                                with Smile
+                            </h1>
 
-                        <p class="font-base">
-                            Amet minim mollit non deserunt ullamco <br>
-                            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
-                        </p>
+                            <p class="font-base">
+                                Amet minim mollit non deserunt ullamco <br>
+                                est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
+                            </p>
 
-                        <button><a class="btn bg-pri-clr text-white font-bold" href="">Purchase</a></button>
+                            <button><a class="btn bg-pri-clr text-white font-bold" href="">Purchase</a></button>
+                        </div>
+
+                        <div class="flex-1">
+                            <img src="./images/slider/bike1.png" class="w-4/5" />
+                        </div>
                     </div>
-
-                    <div class="flex-1">
-                        <img src="./images/slider/bike1.png" class="w-4/5" />
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide4" class="btn btn-circle">❮</a>
+                        <a href="#slide2" class="btn btn-circle">❯</a>
                     </div>
                 </div>
-                <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-                    <a href="#slide4" class="btn btn-circle">❮</a>
-                    <a href="#slide2" class="btn btn-circle">❯</a>
+
+                <div id="slide2" class="carousel-item relative w-full">
+                    <div class="flex flex-col lg:flex-row gap-12 p-10 lg:p-24 w-full">
+                        <div class="space-y-2 lg:space-y-6 flex-1">
+                            <h1 class="text-5xl lg:text-6xl font-bold">
+                                Ride-on R156 V6
+                                <br>
+                                with Smile
+                            </h1>
+
+                            <p class="font-base">
+                                Amet minim mollit non deserunt ullamco <br>
+                                est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
+                            </p>
+
+                            <button><a class="btn bg-pri-clr text-white font-bold" href="">Purchase</a></button>
+                        </div>
+
+                        <div class="flex-1">
+                            <img src="./images/slider/bike2.png" class="w-4/5" />
+                        </div>
+                    </div>
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide1" class="btn btn-circle">❮</a>
+                        <a href="#slide3" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+
+                <div id="slide3" class="carousel-item relative w-full">
+                    <div class="flex flex-col lg:flex-row gap-12 p-10 lg:p-24 w-full">
+                        <div class="space-y-2 lg:space-y-6 flex-1">
+                            <h1 class="text-5xl lg:text-6xl font-bold">
+                                Ride-on R20 V9
+                                <br>
+                                with Smile
+                            </h1>
+
+                            <p class="font-base">
+                                Amet minim mollit non deserunt ullamco <br>
+                                est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
+                            </p>
+
+                            <button><a class="btn bg-pri-clr text-white font-bold" href="">Purchase</a></button>
+                        </div>
+
+                        <div class="flex-1">
+                            <img src="./images/slider/bike3.png" class="w-4/5" />
+                        </div>
+                    </div>
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide2" class="btn btn-circle">❮</a>
+                        <a href="#slide4" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+
+                <div id="slide4" class="carousel-item relative w-full">
+                    <div class="flex flex-col lg:flex-row gap-12 p-10 lg:p-24 w-full">
+                        <div class="space-y-2 lg:space-y-6 flex-1">
+                            <h1 class="text-5xl lg:text-6xl font-bold">
+                                Ride-on R17 V7
+                                <br>
+                                with Smile
+                            </h1>
+
+                            <p class="font-base">
+                                Amet minim mollit non deserunt ullamco <br>
+                                est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
+                            </p>
+
+                            <button><a class="btn bg-pri-clr text-white font-bold" href="">Purchase</a></button>
+                        </div>
+
+                        <div class="flex-1">
+                            <img src="./images/slider/bike4.png" class="w-4/5" />
+                        </div>
+                    </div>
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide3" class="btn btn-circle">❮</a>
+                        <a href="#slide1" class="btn btn-circle">❯</a>
+                    </div>
                 </div>
             </div>
-
-            <div id="slide2" class="carousel-item relative w-full">
-                <div class="flex flex-col lg:flex-row gap-12 p-10 lg:p-24 w-full">
-                    <div class="space-y-2 lg:space-y-6 flex-1">
-                        <h1 class="text-5xl lg:text-6xl font-bold">
-                            Ride-on R156 V6
-                            <br>
-                            with Smile
-                        </h1>
-
-                        <p class="font-base">
-                            Amet minim mollit non deserunt ullamco <br>
-                            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
-                        </p>
-
-                        <button><a class="btn bg-pri-clr text-white font-bold" href="">Purchase</a></button>
-                    </div>
-
-                    <div class="flex-1">
-                        <img src="./images/slider/bike2.png" class="w-4/5" />
-                    </div>
-                </div>
-                <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-                    <a href="#slide1" class="btn btn-circle">❮</a>
-                    <a href="#slide3" class="btn btn-circle">❯</a>
-                </div>
-            </div>
-
-            <div id="slide3" class="carousel-item relative w-full">
-                <div class="flex flex-col lg:flex-row gap-12 p-10 lg:p-24 w-full">
-                    <div class="space-y-2 lg:space-y-6 flex-1">
-                        <h1 class="text-5xl lg:text-6xl font-bold">
-                            Ride-on R20 V9
-                            <br>
-                            with Smile
-                        </h1>
-
-                        <p class="font-base">
-                            Amet minim mollit non deserunt ullamco <br>
-                            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
-                        </p>
-
-                        <button><a class="btn bg-pri-clr text-white font-bold" href="">Purchase</a></button>
-                    </div>
-
-                    <div class="flex-1">
-                        <img src="./images/slider/bike3.png" class="w-4/5" />
-                    </div>
-                </div>
-                <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-                    <a href="#slide2" class="btn btn-circle">❮</a>
-                    <a href="#slide4" class="btn btn-circle">❯</a>
-                </div>
-            </div>
-
-            <div id="slide4" class="carousel-item relative w-full">
-                <div class="flex flex-col lg:flex-row gap-12 p-10 lg:p-24 w-full">
-                    <div class="space-y-2 lg:space-y-6 flex-1">
-                        <h1 class="text-5xl lg:text-6xl font-bold">
-                            Ride-on R17 V7
-                            <br>
-                            with Smile
-                        </h1>
-
-                        <p class="font-base">
-                            Amet minim mollit non deserunt ullamco <br>
-                            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
-                        </p>
-
-                        <button><a class="btn bg-pri-clr text-white font-bold" href="">Purchase</a></button>
-                    </div>
-
-                    <div class="flex-1">
-                        <img src="./images/slider/bike4.png" class="w-4/5" />
-                    </div>
-                </div>
-                <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-                    <a href="#slide3" class="btn btn-circle">❮</a>
-                    <a href="#slide1" class="btn btn-circle">❯</a>
-                </div>
-            </div>
-        </div>
+        </section>
     </header>
 
     <main>
