--- a/index.html
+++ b/index.html
@@ -192,7 +192,16 @@
     </header>
 
     <main>
-
+        <!-- featured section -->
+        <section class="my-32">
+            <h1 class="text-5xl font-semibold text-center mb-16">Fetured Bikes In This Year</h1>
+            
+            <div class="flex flex-col lg:flex-row justify-around">
+                <img src="./images/others/extrabike.png" alt="">
+                <img src="./images/others/extrabike.png" alt="">
+                <img src="./images/others/extrabike.png" alt="">
+            </div>
+        </section>
     </main>
 
     <footer>
