created latest section and made it responsive

--- a/index.html
+++ b/index.html
@@ -195,11 +195,60 @@
         <!-- featured section -->
         <section class="my-32">
             <h1 class="text-5xl font-semibold text-center mb-16">Fetured Bikes In This Year</h1>
-            
+
             <div class="flex flex-col lg:flex-row justify-around">
                 <img src="./images/others/extrabike.png" alt="">
                 <img src="./images/others/extrabike.png" alt="">
                 <img src="./images/others/extrabike.png" alt="">
+            </div>
+        </section>
+
+        <!-- latest section -->
+        <section class="my-32">
+            <h1 class="text-5xl font-semibold text-center mb-16">latest News</h1>
+
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
+                <div class="card card-compact bg-base-100 shadow-xl w-96 m-auto">
+                    <figure>
+                        <img src="./images/others/latest1.png" alt="Shoes" />
+                    </figure>
+                    <div class="card-body">
+                        <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id nisi lectus at.</p>
+                        <div class="card-actions">
+                            <button class="btn bg-pri-clr text-white">Read More</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card card-compact bg-base-100 shadow-xl w-96 m-auto">
+                    <figure>
+                        <img src="./images/others/latest1.png" alt="Shoes" />
+                    </figure>
+                    <div class="card-body">
+                        <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id nisi lectus at.</p>
+                        <div class="card-actions">
+                            <button class="btn bg-pri-clr text-white">Read More</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card card-compact bg-base-100 shadow-xl w-96 m-auto">
+                    <figure>
+                        <img src="./images/others/latest1.png" alt="Shoes" />
+                    </figure>
+                    <div class="card-body">
+                        <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id nisi lectus at.</p>
+                        <div class="card-actions">
+                            <button class="btn bg-pri-clr text-white">Read More</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
