created latest section and made it responsive

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     <main>
         <!-- featured section -->
         <section class="my-32">
-            <h1 class="text-5xl font-semibold text-center mb-16">Fetured Bikes In This Year</h1>
+            <h1 class="text-4xl md:text-5xl font-semibold text-center mb-16">Fetured Bikes In This Year</h1>
 
             <div class="flex flex-col lg:flex-row justify-around">
                 <img src="./images/others/extrabike.png" alt="">
