added hover effect in all buttons

--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
                 </div>
 
                 <div class="">
-                    <a class="btn text-white font-bold bg-pri-clr">Login</a>
+                    <a class="btn text-white font-bold bg-pri-clr hover:bg-white hover:text-pri-clr">Login</a>
                 </div>
             </div>
         </nav>
         <!-- banner section -->
         <section>
-            <div class="carousel w-full  lg:h-[550px] bg-[#E76F511A] rounded-2xl mt-12">
+            <div class="carousel w-full m-auto lg:h-[550px] bg-[#E76F511A] rounded-2xl mt-12">
                 <div id="slide1" class="carousel-item relative w-full ">
                     <div class="flex flex-col lg:flex-row gap-12 p-10 lg:p-24 w-full">
                         <div class="space-y-2 lg:space-y-6 flex-1">
@@ -94,7 +94,7 @@
                                 est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
                             </p>
 
-                            <button><a class="btn bg-pri-clr text-white font-bold" href="">Purchase</a></button>
+                            <button><a class="btn bg-pri-clr text-white font-bold hover:bg-white hover:text-pri-clr" href="">Purchase</a></button>
                         </div>
 
                         <div class="flex-1">
@@ -121,7 +121,7 @@
                                 est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
                             </p>
 
-                            <button><a class="btn bg-pri-clr text-white font-bold" href="">Purchase</a></button>
+                            <button><a class="btn bg-pri-clr text-white font-bold hover:bg-white hover:text-pri-clr" href="">Purchase</a></button>
                         </div>
 
                         <div class="flex-1">
@@ -148,7 +148,7 @@
                                 est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
                             </p>
 
-                            <button><a class="btn bg-pri-clr text-white font-bold" href="">Purchase</a></button>
+                            <button><a class="btn bg-pri-clr text-white font-bold hover:bg-white hover:text-pri-clr" href="">Purchase</a></button>
                         </div>
 
                         <div class="flex-1">
@@ -175,7 +175,7 @@
                                 est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
                             </p>
 
-                            <button><a class="btn bg-pri-clr text-white font-bold" href="">Purchase</a></button>
+                            <button><a class="btn bg-pri-clr text-white font-bold hover:bg-white hover:text-pri-clr" href="">Purchase</a></button>
                         </div>
 
                         <div class="flex-1">
@@ -217,7 +217,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
                             id nisi lectus at.</p>
                         <div class="card-actions">
-                            <button class="btn bg-pri-clr text-white">Read More</button>
+                            <button class="btn bg-pri-clr text-white hover:bg-white hover:text-pri-clr">Read More</button>
                         </div>
                     </div>
                 </div>
@@ -231,7 +231,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
                             id nisi lectus at.</p>
                         <div class="card-actions">
-                            <button class="btn bg-pri-clr text-white">Read More</button>
+                            <button class="btn bg-pri-clr text-white hover:bg-white hover:text-pri-clr">Read More</button>
                         </div>
                     </div>
                 </div>
@@ -245,7 +245,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
                             id nisi lectus at.</p>
                         <div class="card-actions">
-                            <button class="btn bg-pri-clr text-white">Read More</button>
+                            <button class="btn bg-pri-clr text-white hover:bg-white hover:text-pri-clr">Read More</button>
                         </div>
                     </div>
                 </div>
