completed feedback section and made it responsive

--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
                                 est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
                             </p>
 
-                            <button><a class="btn bg-pri-clr text-white font-bold hover:bg-white hover:text-pri-clr" href="">Purchase</a></button>
+                            <button><a class="btn bg-pri-clr text-white font-bold hover:bg-white hover:text-pri-clr"
+                                    href="">Purchase</a></button>
                         </div>
 
                         <div class="flex-1">
@@ -121,7 +122,8 @@
                                 est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
                             </p>
 
-                            <button><a class="btn bg-pri-clr text-white font-bold hover:bg-white hover:text-pri-clr" href="">Purchase</a></button>
+                            <button><a class="btn bg-pri-clr text-white font-bold hover:bg-white hover:text-pri-clr"
+                                    href="">Purchase</a></button>
                         </div>
 
                         <div class="flex-1">
@@ -148,7 +150,8 @@
                                 est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
                             </p>
 
-                            <button><a class="btn bg-pri-clr text-white font-bold hover:bg-white hover:text-pri-clr" href="">Purchase</a></button>
+                            <button><a class="btn bg-pri-clr text-white font-bold hover:bg-white hover:text-pri-clr"
+                                    href="">Purchase</a></button>
                         </div>
 
                         <div class="flex-1">
@@ -175,7 +178,8 @@
                                 est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
                             </p>
 
-                            <button><a class="btn bg-pri-clr text-white font-bold hover:bg-white hover:text-pri-clr" href="">Purchase</a></button>
+                            <button><a class="btn bg-pri-clr text-white font-bold hover:bg-white hover:text-pri-clr"
+                                    href="">Purchase</a></button>
                         </div>
 
                         <div class="flex-1">
@@ -194,7 +198,7 @@
     <main>
         <!-- featured section -->
         <section class="my-32">
-            <h1 class="text-4xl md:text-5xl font-semibold text-center mb-16">Fetured Bikes In This Year</h1>
+            <h1 class="text-5xl font-semibold text-center mb-16">Fetured Bikes In This Year</h1>
 
             <div class="flex flex-col lg:flex-row justify-around">
                 <img src="./images/others/extrabike.png" alt="">
@@ -217,7 +221,8 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
                             id nisi lectus at.</p>
                         <div class="card-actions">
-                            <button class="btn bg-pri-clr text-white hover:bg-white hover:text-pri-clr">Read More</button>
+                            <button class="btn bg-pri-clr text-white hover:bg-white hover:text-pri-clr">Read
+                                More</button>
                         </div>
                     </div>
                 </div>
@@ -231,7 +236,8 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
                             id nisi lectus at.</p>
                         <div class="card-actions">
-                            <button class="btn bg-pri-clr text-white hover:bg-white hover:text-pri-clr">Read More</button>
+                            <button class="btn bg-pri-clr text-white hover:bg-white hover:text-pri-clr">Read
+                                More</button>
                         </div>
                     </div>
                 </div>
@@ -245,9 +251,99 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
                             id nisi lectus at.</p>
                         <div class="card-actions">
-                            <button class="btn bg-pri-clr text-white hover:bg-white hover:text-pri-clr">Read More</button>
+                            <button class="btn bg-pri-clr text-white hover:bg-white hover:text-pri-clr">Read
+                                More</button>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- feedback section -->
+        <section class="my-32">
+            <h1 class="text-4xl md:text-5xl font-semibold text-center mb-16">Happy <span class="text-pri-clr">Clients
+                    says</span></h1>
+
+            <!-- feedbacks -->
+
+            <!-- class="flex flex-col gap-10 p-10 md:flex-row justify-evenly" -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 p-10 lg:gap-40">
+                <div class="text-center space-y-6 border-2 rounded-md py-8 px-10">
+                    <div class="avatar">
+                        <div class="w-36 rounded-full">
+                            <img src="./images/others/user-1.png" />
+                        </div>
+                    </div>
+                    <p>
+                        Slate helps you see how <br>
+                        many more days you need <br>
+                        to work to reach your financial <br>
+                        goal for the month and year.
+                    </p>
+                    <div>
+                        <div class="rating">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                checked="checked" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                    </div>
+                    <div><a href="" class="font-semibold text-[#23A6F0]">Regina Miles</a></div>
+                    <div><a href="" class="font-semibold">Banker</a></div>
+                </div>
+
+                <div class="text-center space-y-6 border-2 rounded-md py-8 px-10">
+                    <div class="avatar">
+                        <div class="w-36 rounded-full">
+                            <img src="./images/others/user-2.png" />
+                        </div>
+                    </div>
+                    <p>
+                        Slate helps you see how <br>
+                        many more days you need <br>
+                        to work to reach your financial <br>
+                        goal for the month and year.
+                    </p>
+                    <div>
+                        <div class="rating">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                checked="checked" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                    </div>
+                    <div><a href="" class="font-semibold text-[#23A6F0]">Regina Miles</a></div>
+                    <div><a href="" class="font-semibold">Banker</a></div>
+                </div>
+
+                <div class="text-center space-y-6 border-2 rounded-md py-8 px-10">
+                    <div class="avatar">
+                        <div class="w-36 rounded-full">
+                            <img src="./images/others/user-3.png" />
+                        </div>
+                    </div>
+                    <p>
+                        Slate helps you see how <br>
+                        many more days you need <br>
+                        to work to reach your financial <br>
+                        goal for the month and year.
+                    </p>
+                    <div>
+                        <div class="rating">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                checked="checked" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                    </div>
+                    <div><a href="" class="font-semibold text-[#23A6F0]">Regina Miles</a></div>
+                    <div><a href="" class="font-semibold">Banker</a></div>
                 </div>
             </div>
         </section>
