--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     </script>
 </head>
 
-<body class="font-poppins container mx-auto">
-    <header class="">
+<body class="font-poppins">
+    <header class="container mx-auto">
         <nav>
             <div class="navbar bg-base-100">
                 <div class="flex-1">
@@ -195,7 +195,7 @@
         </section>
     </header>
 
-    <main>
+    <main class="container mx-auto">
         <!-- featured section -->
         <section class="my-32">
             <h1 class="text-5xl font-semibold text-center mb-16">Fetured Bikes In This Year</h1>
@@ -406,8 +406,49 @@
         </section>
     </main>
 
-    <footer>
+    <!-- <footer class="footer bg-neutral text-neutral-content p-10">
+        
 
+        <p><small>&copy; 2020 bike. All rights reserved</small></p>
+        <nav>
+            <h6 class="footer-title">Get the App</h6>
+            <div class="grid grid-flow-col gap-4">
+                <a><img src="./images/others/android.png" alt=""></a>
+                <a><img src="./images/others/ios.png" alt=""></a>
+            </div>
+        </nav>
+    </footer> -->
+
+    <footer class="bg-neutral text-neutral-content">
+        <div class="footer bg-neutral text-neutral-content p-10 flex justify-around w-100">
+            <div class="md:space-y-6">
+                <div class="space-y-10 md:space-x-10">
+                    <a href="">Download Now</a>
+                    <a href="">License</a>
+                </div>
+
+                <div class="flex flex-col md:flex-row space-y-6 md:space-x-6 md:space-y-0">
+                    <a href="">About</a>
+                    <a href="">Features</a>
+                    <a href="">Pricing</a>
+                    <a href="">Careers</a>
+                    <a href="">Help</a>
+                    <a href="">Privacy Policy</a>
+                </div>
+
+
+            </div>
+
+            <div>
+                <h6 class="footer-title">Social</h6>
+                <div class="flex flex-col gap-4">
+                    <a><img src="./images/others/android.png" alt=""></a>
+                    <a><img src="./images/others/ios.png" alt=""></a>
+                </div>
+            </div>
+        </div>
+
+        <p class="text-center pb-8"><small>&copy; 2020 bike. All rights reserved</small></p>
     </footer>
 </body>
 
