--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
         </section>
 
         <!-- FAQ section  -->
-        <section class="my-32">
+        <!-- <section class="my-32">
             <h1 class="text-4xl md:text-5xl font-semibold text-center mb-16">
                 Frequently Asked <span class="text-pri-clr">Questions</span>
             </h1>
@@ -403,21 +403,8 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
-
-    <!-- <footer class="footer bg-neutral text-neutral-content p-10">
-        
-
-        <p><small>&copy; 2020 bike. All rights reserved</small></p>
-        <nav>
-            <h6 class="footer-title">Get the App</h6>
-            <div class="grid grid-flow-col gap-4">
-                <a><img src="./images/others/android.png" alt=""></a>
-                <a><img src="./images/others/ios.png" alt=""></a>
-            </div>
-        </nav>
-    </footer> -->
 
     <footer class="bg-neutral text-neutral-content">
         <div class="footer bg-neutral text-neutral-content p-10 flex justify-around w-100">
