updated the img size of FAQ section

--- a/index.html
+++ b/index.html
@@ -346,14 +346,14 @@
         </section>
 
         <!-- FAQ section  -->
-        <!-- <section class="my-32">
+        <section class="my-32">
             <h1 class="text-4xl md:text-5xl font-semibold text-center mb-16">
                 Frequently Asked <span class="text-pri-clr">Questions</span>
             </h1>
 
             <div class="hero">
                 <div class="hero-content gap-20 flex-col lg:flex-row">
-                    <img src="./images/others/faq.png" class="max-w-sm" />
+                    <img src="./images/others/faq.png" class="max-w-xs" />
                     <div>
                         <div class="collapse collapse-arrow">
                             <input type="radio" name="my-accordion-2" checked="checked" />
@@ -403,7 +403,7 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
     </main>
 
     <footer class="bg-neutral text-neutral-content">
